# internal/repository/training/model/training.go
@@ -1,4 +1,40 @@
 package model
 
-type Training struct {
+import "time"
+
+type TrainProgram struct {
+	Id          int64  `db:"id"`
+	ProgramName string `db:"program_name"`
+	Description string `db:"description"`
+	IsPublic    bool   `db:"is_public"`
+}
+
+type TrainDay struct {
+	Id          int64  `db:"id"`
+	DayName     string `db:"day_name"`
+	Description string `db:"description"`
+}
+
+type Exercise struct {
+	Id           int64  `db:"id"`
+	ExerciseName string `db:"exercise_name"`
+	Pictures     string `db:"pictures"`
+	Description  string `db:"description"`
+}
+
+type Set struct {
+	Id       int64   `db:"id"`
+	Quantity int64   `db:"quantity"`
+	Weight   float64 `db:"weight"`
+}
+
+type Statistic struct {
+	Id         int64     `db:"id"`
+	Time       time.Time `db:"time"`
+	Quantity   int64     `db:"quantity"`
+	Weight     float64   `db:"weight"`
+	ProgramId  int64     `db:"set_id"`
+	TrainDayId int64     `db:"exercise_id"`
+	ExerciseId int64     `db:"trains_day_id"`
+	SetId      int64     `db:"program_id"`
 }
